--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 
         <meta name="description" content="USPS Postage Price Plotter">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=500, initial-scale=0.86, maximum-scale=1">
         
         <script src="https://kit.fontawesome.com/825da8fc6b.js" crossorigin="anonymous"></script>
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
@@ -46,11 +46,11 @@
                                     <div class="font-italic">Enter zip code/country or click on map/move marker</div>
                                 </div>
                                 <div class="btn-group btn-group-toggle w-100 my-1" data-toggle="buttons">
-                                    <label class="btn btn-sm btn-secondary active">
-                                        <input type="radio" class="shippingTypeRadio" name="shippingType" autocomplete="off" value="domestic" checked>Domestic
+                                    <label class="btn btn-sm btn-secondary">
+                                        <input type="radio" class="shippingTypeRadio" id="domesticRadio" name="shippingType" autocomplete="off" value="domestic">Domestic
                                     </label>
                                     <label class="btn btn-sm btn-secondary">
-                                        <input type="radio" class="shippingTypeRadio" name="shippingType" autocomplete="off" value="international">International
+                                        <input type="radio" class="shippingTypeRadio" id="internationalRadio" name="shippingType" autocomplete="off" value="international">International
                                     </label>
                                 </div>
                                 <span class="mt-1 shippingDestForms">
@@ -340,11 +340,21 @@
                                 </div>
                                 <div class="text-center my-1">
                                     <label class="font-weight-bold" for="poundsRange">Pounds (0 to 69)</label>
-                                    <input class="form-control w-75" type="range" id="poundsRange" name="pounds" min="0" max="69" step="1"><span class="pl-2" id="poundsRangeTxt"></span>
+                                    <span class="row text-center">
+                                        <span class="col-11">
+                                            <input class="form-control w-100" type="range" id="poundsRange" name="pounds" min="0" max="69" step="1">
+                                        </span>
+                                        <span class="col-1 my-auto" id="poundsRangeTxt"></span>
+                                    </span>
                                 </div>
                                 <div class="text-center my-1">
                                     <label class="font-weight-bold" for="ouncesRange">Ounces (0.5 to 16)</label>
-                                    <input class="form-control w-75" type="range" id="ouncesRange" name="ounces" min="0.5" max="16" step="0.5"><span class="pl-2" id="ouncesRangeTxt"></span>
+                                    <span class="row text-center">
+                                        <span class="col-11">
+                                            <input class="form-control w-100" type="range" id="ouncesRange" name="ounces" min="0.5" max="16" step="0.5">
+                                        </span>
+                                        <span class="col-1 my-auto" id="ouncesRangeTxt"></span>
+                                    </span>
                                 </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xl-4">
@@ -390,7 +400,7 @@
                                 <hr>
                                 <div class="text-center">
                                     <span class="font-weight-bold">Machinability</span>
-                                    <div class="font-italic">(Only for First Class Letters and Postcards)</div>
+                                    <div class="font-italic">(Only for First Class Letters, Flats, Postcards and Retail Ground)</div>
                                 </div>
                                 <div class="btn-group btn-group-toggle w-100 my-1" data-toggle="buttons">
                                     <label class="btn btn-sm btn-secondary">
@@ -401,12 +411,16 @@
                                     </label>
                                 </div>
                         </div>
-                        <button class="btn btn-primary w-100 m-3">Update</button>
+                        <div class="col-12">
+                            <hr>
+                            <button class="btn btn-primary w-100 m-1">Update</button>
+                            <hr>
+                        </div>
                     </form>
                 </div>
                 <div class="tab-pane fade" id="results" role="tabpanel">
                     <p id="resMsg" class="text-primary text-center w-100 h5 p-3">
-                        Please select a destination to show available services by clicking on the map or using the Filters menu
+                        Please use the Update button on the Options tab to show results
                     </p>
                     <table class="table table-striped table-bordered table-sm text-center">
                     <thead>
