--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
         <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 
-        <meta name="description" content="USPS Postage Price Plotter">
+        <meta name="description" content="USPS Postage Price Plotter is a web app that provides a way to quickly and easily calculate shipping prices using a map">
         <meta name="viewport" content="width=500, initial-scale=0.86, maximum-scale=1">
         
         <script src="https://kit.fontawesome.com/825da8fc6b.js" crossorigin="anonymous"></script>
